Revert "SDI-71: 📝 Convert to springdoc (#1171)"
This reverts commit bad3902e84eebe4e82860732d921a662b54a2564.